tests/specs/ecosystem/mr/tracecontext/0_2_0.test
mr/tracecontext/0.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Map<any, any>'.
  set(key: string, value: unknown): this {
  ~~~
    at file://<tmpdir>/tracestate.ts:42:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Map<any, any>'.
  toString(): string {
  ~~~~~~~~
    at file://<tmpdir>/tracestate.ts:45:3

Found 2 errors.

